--- a/etc/runit/bootup/README
+++ b/etc/runit/bootup/README
@@ -1,7 +1,9 @@
-Runit bootup scripts are borrowed from core-services in VOID Linux 
-(https://github.com/void-linux/void-runit/tree/master/core-services)
-and modified for Amazon EC2 compatibility.
+Runit stage 1 - shell scripts
 
 All scripts named '*.sh' will be executed in series, in the glob order.
+Executable bit is not required.
+
+This bootup script structure is based on core-services in VOID Linux:
+https://github.com/void-linux/void-runit/tree/master/core-services
 
 (cloux@rote.ch)
